# eSignAgent

./: .gitignore  LICENSE  README.md  update.xml
docs/: update.xml.template
extension/: background.js  content.js  manifest.json  page-bridge.js
installer/windows/: dev_install.ps1  installer.iss  native_host_manifest.template.json
native-host/: build_windows.py  pyproject.toml  requirements.txt  run_host.py
native-host/esignagent/: __init__.py  linux_signer.py  macos_signer.py  main.py  messaging.py  windows_signer.py
