[project]
name = "esignagent-host"
version = "1.0.0"
description = "eSignAgent — Native host for in-browser PDF digital signing"
requires-python = ">=3.10"
authors = [{ name = "eSignAgent" }]
dependencies = [
    "asn1crypto>=1.5.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["esignagent*"]
